--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h2>What's up</h2>
 <p>biach igdkvndslkfja</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium minus est quasi impedit harum saepe sunt officia voluptatibus suscipit, consequatur laborum accusantium. Quisquam beatae quibusdam eligendi assumenda unde, dolor doloremque?</p>
+<h2>Git check</h2>
